headlines horizontal scrolling fix for IE6 (2)

--- a/ie6.css
+++ b/ie6.css
@@ -3,7 +3,7 @@
 }
 
 #headlinesContainer {
-	width: expression((parseInt(document.documentElement.clientWidth)-281)+'px');
+	width: expression(((parseInt(document.getElementById("headlines-frame").clientWidth)-2)+'px'));
 }
 
 #headlinesInnerContainer {
